--- a/Scarb.toml
+++ b/Scarb.toml
@@ -6,6 +6,9 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+starknet = "2.7.0"
 
 [dev-dependencies]
 cairo_test = "2.7.0"
+
+[[target.starknet-contract]]
